# twonly-app

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  analysis_options.yaml  build.yaml  firebase.json  flutter_rust_bridge.yaml  generate_proto.sh  l10n.yaml  pubspec.yaml
.blocked/archives/: contacts_model.dart
.github/: FUNDING.yml
.github/workflows/: dev_github.yml  release_github.yml
android/: .gitignore  build.gradle  key.github.properties.example  settings.gradle
android/app/: build.gradle  google-services.json
assets/animated_icons/: 100.lottie  airplane-departure.lottie  alarm-clock.lottie  alien.lottie  ant.lottie  arm-mechanical.lottie  automobile.lottie  balloon.lottie  bandage-face.lottie  beating-heart.lottie  bee.lottie  bell.lottie  black-flag.lottie  blowfish.lottie  blue-heart.lottie  blush.lottie  bomb.lottie  bottle-with-popping-cork.lottie  broken-heart.lottie  burrito.lottie  call-me-hand.lottie  chequered-flag.lottie  clap.lottie  clinking-beer-mugs.lottie  clown.lottie  cockroach.lottie  cold-face.lottie  collision.lottie  confetti-ball.lottie  cowboy.lottie  crab.lottie  crocodile.lottie  cross-mark.lottie  crossed-fingers.lottie  cry.lottie  crying-cat-face.lottie  cupid.lottie  cursing.lottie  dancer-woman.lottie  delete.py  (+157 more)
assets/animations/: donation.json  donation.lottie  e2e.lottie  failed.lottie  forsale.json  forsale.lottie  messages.lottie  present.lottie.lottie  rocket.json  rocket.lottie  selfie.json  selfie2.lottie  success.lottie  takephoto.lottie  twonlies.lottie
assets/icons/: verified_badge_green.svg.vec  verified_badge_red.svg.vec
assets/images/: default_avatar.svg.vec
assets/passwords/: bad_passwords.txt
drift_schemas/twonly_database/: drift_schema_v1.json  drift_schema_v10.json  drift_schema_v14.json  drift_schema_v15.json  drift_schema_v16.json  drift_schema_v3.json
fastlane/: Appfile  Fastfile  README.md  report.xml
integration_test/: api_service.test.dart  simple_test.dart
ios/: Podfile
ios/Flutter/: AppFrameworkInfo.plist
ios/NotificationService/: NotificationService.entitlements  NotificationService.swift  push_notification.pb.swift
ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist  Runner.entitlements  RunnerRelease.entitlements  VideoCompressionChannel.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/ShareExtension/: FSIShareViewController.swift  Info.plist  ShareExtension.entitlements  ShareViewController.swift
lib/: app.dart  firebase_options.dart  globals.dart  locator.dart  main.dart
lib/core/: bridge.dart  context.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  twonly.dart
lib/src/: app.dart  utils.dart
lib/src/model/: user.dart  (+13 more)
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
metadata/de-DE/: full_description.txt  short_description.txt  title.txt
metadata/en-US/: full_description.txt  short_description.txt
rust/: .gitignore  Cargo.toml  build.rs
rust/core/: Cargo.toml
rust/core/src/: frb_generated.rs  lib.rs  user_discovery_store.rs  utils.rs
rust/core/src/bridge/: error.rs  mod.rs  user_discovery.rs
rust/core/src/database/: contact.rs
rust/core/tests/: testing.db
rust/protocols/: Cargo.toml
rust/protocols/src/: user_discovery.rs
rust/protocols/src/key_verification/: types.proto
rust/protocols/src/user_discovery/: error.rs  mod.rs  tests.rs  traits.rs  types.proto
rust/src/: context.rs  error.rs  frb_generated.rs  key_manager.rs  lib.rs  log.rs  secure_storage.rs  standalone.rs  utils.rs
rust/src/backup/: backup_archive.rs  backup_identity.rs  backup_password.rs  mod.rs
rust/src/backup/backup_passwordless/: types.rs
rust/src/bridge/: callbacks.rs  error.rs  log.rs  mod.rs  user_discovery_utils.rs
rust/src/bridge/callbacks/: log.rs  macros.rs  user_discovery.rs
rust/src/bridge/wrapper/: backup.rs  key_manager.rs  mod.rs  user_discovery.rs
rust/src/database/: mod.rs
rust/src/database/migrations/: 0001_initial.sql
rust/src/database/tables/: mod.rs  received_messages.rs  sending_messages.rs
rust/src/key_verification/: mod.rs  traits.rs
rust/src/keys/: README.md  backup_password_keys.rs  identity_key.rs  main_key.rs  mod.rs
rust/src/keys/identity_key/: mod.rs  signal_identity_key.rs
rust/src/passwordless_recovery/: mod.rs  types.proto
rust/src/standalone/: mod.rs
rust/src/twonly/: error.rs  mod.rs
rust/src/twonly/database/: contact.rs  mod.rs
rust/src/twonly/log/: mod.rs
rust/src/user_discovery/: README.md  error.rs  mod.rs  tests.rs  traits.rs  types.proto
rust/src/user_discovery/stores/: in_memory_store.rs  mod.rs
rust/tests/: testing.db
rust_builder/: pubspec.yaml
rust_dependencies/: Cargo.toml
rust_dependencies/protocols/: Cargo.toml  build.rs
rust_dependencies/protocols/src/: lib.rs  user_discovery.rs
rust_dependencies/protocols/src/key_verification/: error.rs  mod.rs  traits.rs
rust_dependencies/protocols/src/key_verification/stores/: in_memory_store.rs  mod.rs
rust_dependencies/protocols/src/passwordless_recovery/: types.proto
rust_dependencies/protocols/src/user_discovery/: error.rs  mod.rs  tests.rs  traits.rs
rust_dependencies/protocols/src/user_discovery/stores/: in_memory_store.rs  mod.rs
scripts/: check_arb.py  check_dependencies.py  compile_svgs.dart  generate_proto.sh
test/: time_difference_test.dart  unit_test.dart  widget_test.dart
(+982 files in other folders)
