[package]
name = "rust_lib_twonly"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
thiserror = "2.0.18"
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
    "derive",
    "json",
] }
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1.44"
serde = "1.0.228"
prost = "0.14.1"
rand = "0.10.1"
blahaj = "0.6.0"
postcard = { version = "1.1.3", features = ["alloc"] }

[dev-dependencies]
pretty_env_logger = "0.5.0"


[build-dependencies]
prost-build = "0.14.1"
