[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"
serde = "1.0.228"
prost = "0.14.1"
rand = "0.10.1"
blahaj = "0.6.0"
postcard = { version = "1.1.3", features = ["alloc"] }
base64 = "0.22.1"
hmac = "0.13.0"
sha2 = "0.11.0"

[dev-dependencies]
pretty_env_logger = "0.5.0"

[build-dependencies]
prost-build = "0.14.1"
